# autodegen

./: README.md  TODO.md  compute_features.py  degen.md  leaderboard.tsv  plot.py  prepare.py  program.md  pyproject.toml  results_v1_unconstrained.tsv  strategy.py  validate_features.py
autodegen/: agent_loop.py  git_ops.py
autodegen/oracle/: backtest.py  evaluate.py
autodegen/sandbox/: runner.py
tests/: test_agent_loop.py  test_evaluate.py  test_git_ops.py  test_sandbox_runner.py
