[project]
name = "autodegen"
version = "0.1.0"
description = "Minimal autoresearch-style strategy loop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ccxt>=4.4.0",
  "matplotlib>=3.10.8",
  "polars>=1.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
